[metadata]
name = GradCAM
version = 1.0.0
author = James Brooks
author_email = jamesalexander.brooks@med.uni-duesseldorf.de
description = functions to produce GradCAM of given image, MIL model and feature ectractor
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/brooksja/GradCAM.git
classifiers 0 
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: Fedora 38

[options]
packages = find:
python_requires = >=3.11
install_requires = 
    torch
    torchvision
    matplotlib
    pathlib
    fastai
    pillow